--- a/versions.cfg
+++ b/versions.cfg
@@ -1,6 +1,6 @@
 [buildout]
 extends = 
-    http://dist.plone.org/release/4.2.5/versions.cfg
+    plone-versions.cfg
 
 find-links = 
     http://dist.plone.org/release/4.2.5
